--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@sentry/react": "^8.34.0",
+    "@sentry/vite-plugin": "^2.22.5",
     "gsap": "^3.12.5",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.79.5",
     "three": "^0.169.0"
   },
   "devDependencies": {
